QuantumからNeutronにコードネーム変更になったらしい。

--- a/OpenStack/運用ノウハウ.md
+++ b/OpenStack/運用ノウハウ.md
@@ -2,6 +2,11 @@
 
 OpenStackの運用ノウハウを書きなぐる。
 
+## Topics
+
+- 最近ネットワークコンポーネントのコードネームがQuantumからNeutronに変更になったらしい。  
+[Fwd: [Openstack] Quantum is changing its name to... - Google グループ](https://groups.google.com/forum/#!topic/openstack-ja/ScQA_eLd2Gw)
+
 ## インスタンスの構成
 
 必要最低限のOSイメージを作成して  
